# LegoCatBuilder

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md
.cursor/rules/: agent-permissions.mdc  project-workflow.mdc
.cursor/skills/task-management-workflow/: SKILL.md
contracts/examples/: brick_inventory.example.json  photo_set.example.json
contracts/schemas/: brick_inventory.schema.json  build_plan.schema.json  photo_acceptance_report.schema.json  photo_set.schema.json
conversation_cursor/202604/20260427/: initialize_lego_cat_pipeline.md
docs/implementation/: lego_cat_3d_phase_guide.md
inputs/photosets/: thu_mvs_cat_selected_views.photo_set.json
outputs/meshes/: thu_mvs_cat_delaunay_fine_balanced.ply
outputs/reports/: thu_mvs_cat_colmap_automatic_summary.json  thu_mvs_cat_colmap_full_summary.json  thu_mvs_cat_phase1_acceptance_report.json  thu_mvs_cat_phase2_reconstruction_summary.json
progress/: latest.md
python/: RUN.md  pyproject.toml
python/code/: colmap_automatic_reconstructor.py  greedy_decompose_voxels.py  phase1_validate_photo_set.py  phase2_reconstruct_from_photo_set.py  photo_metrics.py  video_to_photo_set.py  visualize_reconstruction.py  voxelize_ascii_ply.py
structure/: latest.md
task_summary/202604/20260427/: initialize_lego_cat_pipeline.md
to-do/202604/20260427/: initialize_lego_cat_pipeline.md
